# Car-Parking-Project

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  car_parking_project.py  docker-compose.yml  main.py  main_or.py  pyproject.toml  requirements.txt
car-parking/: .example.env  README.md  main.py  pyproject.toml  pyproject_or.toml
car-parking/migrations/versions/: 53489f9a3801_init.py  6475a8bbbe39_user_banned.py  9f661b736e1f_init.py
car-parking/postgres-data/: postmaster.pid
car-parking/postgres-data/base/13481/: pg_internal.init
car-parking/postgres-data/global/: 1262  2671  pg_control  pg_internal.init
car-parking/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
car-parking/src/: schemas.py
car-parking/src/database/: db.py  models.py
car-parking/src/repository/: AdminService.py  UserService.py  admin.py  images.py  user.py  users.py
car-parking/src/repository_or/: user_or.py  users.py
car-parking/src/routes/: RouteAdmin.py  auth.py  comments.py  images.py
car-parking/src/routes_or/: auth.py
car-parking/src/services/: auth.py  email.py
car_parking/: Dockerfile  pyproject.toml
car_parking/csv_files/: AB3765VA.csv  hello.csv  test2.csv  userMI.csv
car_parking/migrations/versions/: 349695fca431_tariff_2.py  bbd1b831e087_parking_count.py  c543ceb93af1_tariff_3.py  cbeec90c3818_tariff_5.py  d70aa16d7762_tariff.py
car_parking/src/conf/: config.py  extensions.py  tariffs.py
car_parking/src/conf_or/: messages.py
car_parking/src/database/: db.py  models.py
src/conf/: config.py
(+33 files in other folders)
