[tool.poetry]
name = "car-parking-project"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.3"
fastapi = "^0.110.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
